# solana-training

curs1/: balance.ts  package-lock.json  package.json
curs2/: generate-keypairs.ts  package.json
curs3/: main.ts  package-lock.json  package.json
curs4/: create-token-account.ts  create-token-mint.ts  generate-key-pair.ts  main.ts  mint-tokens.ts  package-lock.json  package.json  send-spl-tokens.ts
curs5/: nft.ts  package-lock.json  package.json
curs6/rustlings/exercises/03_if/: if1.rs
curs6/rustlings/exercises/04_primitive_types/: primitive_types1.rs  primitive_types3.rs
curs6/rustlings/exercises/05_vecs/: vecs1.rs  vecs2.rs
curs6/rustlings/exercises/07_structs/: structs1.rs  structs2.rs  structs3.rs
curs6/rustlings/exercises/08_enums/: enums1.rs  enums2.rs  enums3.rs
curs6/rustlings/exercises/09_strings/: strings3.rs
cursseven/: Anchor.toml
cursseven/programs/cursseven/: Cargo.toml
cursseven/programs/cursseven/src/: lib.rs
cursseven/tests/: cursseven.ts
escrow/: Anchor.toml  package-lock.json
favorites/: Anchor.toml
favorites/tests/: favorites.ts
solana-developers-program/: .gitignore  .gitmodules
solana-developers-program/course5/: package-lock.json  package.json
solana-developers-program/course5/src/: index.ts
solana-developers-program/solana-ping-frontend/: package-lock.json  package.json
solana-developers-program/solana-ping-frontend/components/: AppBar.tsx  BalanceSOL.tsx  PingButton.tsx  SendAmount.tsx  WalletContextProvider.tsx
solana-developers-program/solana-ping-frontend/pages/: index.tsx
(+3 files in other folders)
